<resources>
    <string name="app_name">Music Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_of_the_song">Title of the song</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="_00_00">00:00</string>
    <string name="welcome_to_our_music_player">Welcome to our Music Player</string>
    <string name="hello">Hello.</string>
    <string name="login">Login</string>
</resources>