<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="12dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".loginAndRegis.LoginActivity">

    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_icon"
        android:orientation="vertical"
        android:id="@+id/TextToHello">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_our_music_player"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextToHello"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:id="@+id/formFill"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            android:textSize="20sp"
            android:layout_margin="4dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_corner"
                android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:textSize="20sp"
            android:layout_margin="4dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/rounded_corner"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/loginBtn"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorButton"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            />
        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formFill"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_an_account"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#0E0A0A"
            android:text="@string/sign_up"
            android:id="@+id/signupBtn"

            />

    </LinearLayout>
</RelativeLayout>